build: finalize web core with SSoT integration and path resolution

--- a/locales/ar.json
+++ b/locales/ar.json
@@ -1,21 +1,102 @@
 {
   "nav": {
     "home": "الرئيسية",
-    "about": "من نحن",
-    "features": "المميزات",
+    "about": "حول",
+    "features": "الميزات",
+    "developers": "المطورون",
+    "governance": "الحوكمة",
+    "docs": "الوثائق",
     "contact": "اتصال",
     "login": "تسجيل الدخول"
   },
+
+  "common": {
+    "language": "اللغة",
+    "learn_more": "اعرف المزيد",
+    "read_docs": "اقرأ الوثائق",
+    "view_github": "عرض على GitHub",
+    "coming_soon": "قريبًا"
+  },
+
   "home": {
-    "title": "كوانتم باي – المدفوعات الرقمية الذكية",
-    "subtitle": "حلول دفع سريعة وآمنة وعالمية",
+    "title": "شبكة بلوكتشين كوانتم باي",
+    "subtitle": "شبكة بلوكتشين من الطبقة الأولى من الجيل التالي، مصممة للأمان وقابلية التوسع والجاهزية التنظيمية.",
+    "tagline": "مفتوحة المصدر. حتمية. مبنية على المدى الطويل.",
+
+    "cta_primary": "استكشف الشبكة",
+    "cta_secondary": "تشغيل عقدة",
+
     "features": {
-      "fast": "معاملات سريعة",
-      "fast_desc": "تنفيذ المدفوعات خلال ثوانٍ باستخدام أحدث التقنيات.",
-      "secure": "نظام آمن",
-      "secure_desc": "أمان بمستوى البنوك لكل معاملة.",
-      "global": "وصول عالمي",
-      "global_desc": "إرسال واستقبال المدفوعات حول العالم."
+      "fast": "سريعة وحتمية",
+      "fast_desc": "يتم تحقيق نهائية الكتل خلال ثوانٍ باستخدام إجماع PoS + BFT، مما يضمن معاملات متوقعة وغير قابلة للعكس.",
+
+      "secure": "الأمان في التصميم",
+      "secure_desc": "بنية تعتمد على التشفير أولاً، مع آليات العقوبات (Slashing)، ومساءلة المدققين، وحدود ثقة واضحة بين الأنظمة داخل السلسلة وخارجها.",
+
+      "global": "مبنية للتبني العالمي",
+      "global_desc": "مصممة لخدمة المناطق التي لا تمتلك بنية تحتية وطنية للبلوكتشين، بدءًا من جنوب شرق آسيا والتوسع عالميًا."
     }
+  },
+
+  "about": {
+    "title": "حول كوانتم باي",
+    "description": "كوانتم باي هي شبكة بلوكتشين عامة من الطبقة الأولى تركز على الاستدامة طويلة الأمد، واستهلاك الطاقة المنخفض، والحوكمة الشفافة.",
+    "mission_title": "المهمة",
+    "mission_desc": "توفير أساس بلوكتشين آمن ومحايد للحكومات والشركات والشبكات المفتوحة."
+  },
+
+  "features": {
+    "title": "الميزات الأساسية",
+    "consensus": {
+      "title": "نهائية PoS + BFT",
+      "desc": "يقوم المدققون برهن الأصول والمشاركة في إجماع متسامح مع الأخطاء البيزنطية لتحقيق نهائية سريعة وغير قابلة للعكس دون هدر للطاقة."
+    },
+    "architecture": {
+      "title": "بنية معيارية",
+      "desc": "فصل واضح بين الإجماع الأساسي، والشبكات، والتنفيذ، والخدمات خارج السلسلة عبر gRPC وIPC."
+    },
+    "opensource": {
+      "title": "مفتوحة المصدر افتراضيًا",
+      "desc": "يتم نشر جميع شيفرات وبروتوكولات النواة بشكل مفتوح. GitHub هو المصدر الوحيد للحقيقة."
+    }
+  },
+
+  "developers": {
+    "title": "المطورون",
+    "subtitle": "ابنِ مباشرة على الطبقة الأساسية لشبكة كوانتم باي.",
+    "docs": "وثائق المطورين",
+    "run_node": "تشغيل عقدة أساسية",
+    "grpc": "واجهات gRPC وIPC",
+    "sdk": "حزم تطوير البرمجيات والأدوات (قريبًا)"
+  },
+
+  "governance": {
+    "title": "الحوكمة",
+    "description": "تعطي حوكمة كوانتم باي الأولوية لاستقرار البروتوكول، والتحكم الشفاف في التغييرات، وسلامة الشبكة على المدى الطويل.",
+    "onchain": "حوكمة داخل السلسلة (مخطط لها)",
+    "offchain": "حوكمة خارج السلسلة قائمة على الوثائق (نشطة)"
+  },
+
+  "network": {
+    "title": "معلومات الشبكة",
+    "name": "شبكة كوانتم باي الرئيسية",
+    "chain_id": "معرف السلسلة",
+    "consensus": "الإجماع",
+    "status": "حالة الشبكة",
+    "mainnet_live": "الشبكة الرئيسية نشطة"
+  },
+
+  "contact": {
+    "title": "اتصال",
+    "security": "تقارير الأمان",
+    "security_desc": "يرجى الإبلاغ عن الثغرات الأمنية بشكل خاص.",
+    "email": "البريد الإلكتروني",
+    "note": "لا يوجد دعم رسمي عبر Telegram أو WhatsApp أو الرسائل الخاصة في هذه المرحلة."
+  },
+
+  "footer": {
+    "copyright": "© 2026 شبكة كوانتم باي",
+    "opensource": "شبكة بلوكتشين مفتوحة المصدر",
+    "source_of_truth": "المصدر الرسمي: GitHub"
   }
 }
